Adjust: fix commit error
